--- a/Relatório/stylesheet/style.css
+++ b/Relatório/stylesheet/style.css
@@ -3,8 +3,7 @@ section {
 }
 
 .code {
-  border-style: solid;
-  border-width: 1.5px;
+  margin-right: 100px;
   color: white;
   background-color: rgba(0, 0, 0, 0.815);
   border-color: black;
